docs(tetragon-lab): add TOC & numbered sections; comment Override and note kernel limits
* Added table of contents and `#### <n>` section headings to README.md
* Included optional `tetra` alias and clarified `kubectl apply -f lab.yml` usage
* Replaced fake binaries with `/usr/bin/head` for the blocked example
* Documented how to check `override_return`/`lsm` support in Tetragon logs
* Commented out `action: Override` (and argError) in lab.yml; kept `Sigkill` to enforce on kernels without bpf\_override\_return
* Minor wording/format fixes throughout README.md

--- a/2025/kcdperu-tetragon/lab.yml
+++ b/2025/kcdperu-tetragon/lab.yml
@@ -20,8 +20,8 @@ spec:
         values:
           - "/bin/cat"
       matchActions:
-      - action: Override
-        argError: -1
+      # - action: Override
+      #   argError: -1
       - action: Sigkill
 ---
 apiVersion: v1
